webpage has been made

--- a/src/sass/sn/sn.sass
+++ b/src/sass/sn/sn.sass
@@ -1,10 +1,73 @@
+@import "colors.sass"
+    
 .sn_container
-    text-align: center
+    
+    h1
+        font-family: Hack, 'Courier New', Courier, monospace
 
-    div
-        padding-top: 50px
+.sn_card
 
-        div
-            padding: 40px
-            background: #FFFFFF
-            
+    //     <!-- HTML !-->
+    // <button class="button-58" role="button">Button 58</button>
+
+    /* CSS */
+    $sn-default-button-color: #06f
+    
+    .button-58 
+        flex: 1 0 auto
+        align-items: center
+        background-color: $sn-default-button-color
+        border: 2px solid $sn-default-button-color
+        box-sizing: border-box
+        color: #fff
+        cursor: pointer
+        display: inline-flex
+        fill: #000
+        font-family: Inter,sans-serif
+        font-size: 16px
+        font-weight: 600
+        height: 48px
+        justify-content: center
+        letter-spacing: -.8px
+        line-height: 24px
+        // min-width: 140px
+        outline: 0
+        padding: 0 17px
+        text-align: center
+        text-decoration: none
+        transition: all .3s
+        user-select: none
+        -webkit-user-select: none
+        touch-action: manipulation
+        
+    .button-58-telegram
+        @extend .button-58
+        background-color: $sn-tg-color
+        border-color: $sn-tg-color
+
+    .button-58-github
+        @extend .button-58
+        background-color: $sn-github-color
+        color: white
+        border-color: $sn-github-color
+
+    .button-58:focus 
+        color: #3b4c68
+    
+
+    .button-58:hover 
+        background-color: #3385ff
+        border-color: #3385ff
+        fill: #06f
+        
+
+    .button-58:active 
+        background-color: #3385ff
+        border-color: #3385ff
+        fill: #06f
+        
+
+    @media (min-width: 768px) 
+    .button-58 
+        min-width: 170px
+    
